--- a/README
+++ b/README
@@ -3,26 +3,32 @@ bonsaimind.org
 
 This is the source code for the [bonsaimind.org](https://www.bonsaimind.org)
 website. It is a Markdown document which is converted to HTML with
-Pandoc](https://pandoc.org/).
+[Pandoc](https://pandoc.org/).
 
 
 License
 -------
 
-The build script (`build.sh`), the Lua filter (`filter.lua`) and the template
-file (`index.template`) can be considered to be under CC0 or Public Domain.
+The build script (`build.sh`), the Lua filter (`processing/filter.lua`) and
+the template file (`processing/index.template`) can be considered to be under
+CC0 or Public Domain.
 
-The index file (`index.markdown`) has to be considered "All Rights Reserved",
-with the exception of cloning this repository, and being edited for the purpose
-of merging these changes back.
+The index file (`content/index.markdown`) has to be considered
+"All Rights Reserved", with the exception of cloning this repository, and being
+edited for the purpose of merging these changes back.
 
-The avatar (`avatar.png`) and logo (`logo.svg`) have to be considered
-"All Rights Reserved" with the exception of cloning this repository. However,
-modifications or reuse of these two files are not allowed.
+The avatar (`content/avatar.png`) and logo (`content/logo.svg`) have to be
+considered "All Rights Reserved" with the exception of cloning this repository.
+However, modifications or reuse of these two files are not allowed.
 
-The icons (`icons.svg`) is a SVG sprite with icons from
+The icons (`content/icons.svg`) is a SVG sprite with icons from
 [Font Awesome](https://github.com/FortAwesome/Font-Awesome), see the attached
 license file for further details.
+
+The Pandoc](https://pandoc.org/) executable (`processing/pandoc-linux-x64') is
+the pre-built release package from
+the [Pandoc release site](https://github.com/jgm/pandoc/releases/) and is
+licenses under the GPLv2+.
 
 
 Build
