--- a/README
+++ b/README
@@ -9,9 +9,9 @@ website. It is a Markdown document which is converted to HTML with
 License
 -------
 
-The build script (`build.sh`), the Lua filter (`processing/filter.lua`) and
-the template file (`processing/index.template`) can be considered to be under
-CC0 or Public Domain.
+The build script (`build.sh`), the Lua filter (`toolchain/filter.lua`) and
+the template files (`templates/*`) can be considered to be under CC0 or
+Public Domain.
 
 The index file (`content/index.markdown`) has to be considered
 "All Rights Reserved", with the exception of cloning this repository, and being
@@ -25,7 +25,7 @@ The icons (`content/icons.svg`) are a SVG sprite with icons from
 [Font Awesome](https://github.com/FortAwesome/Font-Awesome), see the attached
 license file for further details.
 
-The [Pandoc](https://pandoc.org/) executable (`processing/pandoc-linux-x64') is
+The [Pandoc](https://pandoc.org/) executable (`toolchain/pandoc-linux-x64') is
 the pre-built release package from
 the [Pandoc release site](https://github.com/jgm/pandoc/releases/) and is
 licensed under the GPLv2+.
